# conan-playground

./: README.md
alpha/: CMakeLists.txt  alpha.h  conanfile.py  src.cpp
beta/: CMakeLists.txt  beta.h  conanfile.py  src.cpp
delta/: CMakeLists.txt  conanfile.py  delta.h  src.cpp
epsilon/: CMakeLists.txt  conanfile.py  epsilon.h  src.cpp
gamma/: CMakeLists.txt  conanfile.py  gamma.h  src.cpp
